@@ -6,6 +6,9 @@ Current Level Cap: 25
 - - - - - - - - - - - - -
 INTRO TEXT
 
+Additions:
+ - Discord rich presence will also show battle details.
+
 Changes:
  - Increased initial levels of Player 3 from 3 → 4 and Player 4 from 4 → 5.
  - Swapped Foresight and Offensive Stance learn levels.
